--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
 spring.kafka.bootstrap-servers=localhost:9092
+kafka.camera.topic=camera-sensors
