add kafka sender and controller for RFSensor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.data.mongodb.host=localhost
 
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.camera.topic=camera-sensors
+kafka.rf.sensor.topic=rf-sensors
