Update properties and unregistering logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.data.mongodb.database=sensors
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
-spring.kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap-servers=localhost:9092
 kafka.camera.topic=camera-sensors
 kafka.rf.sensor.topic=rf-sensors
