--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,8 @@ spring.application.name=sensor-service
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka/,http://localhost:8002/eureka/
 
 spring.data.mongodb.database=sensors
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo
 
-kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap-servers=kafka:9092
 kafka.camera.topic=camera-sensors
 kafka.rf.sensor.topic=rf-sensors
